2009-07-16  Robin Stocker  <robin@nibor.org>

	* src/totem-object.c (drop_video_cb, drag_video_cb):
	* src/totem-private.h (TotemObject): When dragging the video and
	then accidentally dropping it again on itself, ignore it instead
	of restarting the video. (Closes: #578249)

2009-05-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_uri_get_cached_subtitle_for_uri):
	Fix loading subtitles from the cache when the filename contains
	characters that need to be escaped (Closes: #582316) 

2009-05-13  Jan Schmidt  <thaytan@noraisin.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_element_msg_sync):
	Avoid a race with xoverlay interface discovery. Because the
	update_interface implementations function only searches for interfaces
	from the main gui thread, there's a race when the sync_msg comes in
	requesting an xid to embed and the xoverlay interface isn't available
	until the gui thread updates it.

	Avoid the race by using the sender of the message when it (as it
	always should) implements the GstXOverlay interface.

============ Version 2.26.2

2009-05-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.26.2

2009-05-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: Add support for autohref,
	makes trailers on the Apple website work again
	(Closes: #580973)

2009-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_add_subtitle):
	Add the cache subtitles directory to the subtitle file
	selection dialogue's shortcuts (Closes: #579860)

2009-04-23  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/opensubtitles/opensubtitles.py:
	Fix failure to save downloaded subtitles, see
	https://bugzilla.redhat.com/show_bug.cgi?id=497210

2009-04-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (resolve_uri):
	Fix resolve_uri returning an empty URI when trying to resolve
	with a base at the root of a webserver (Closes: #579716)
