@@ -1,3 +1,9 @@
+2009-07-18  Robin Stocker  <robin@nibor.org>
+
+	* src/totem-object.c (drop_video_cb, drop_playlist_cb):
+	When drag and dropping a video on itself with Alt pressed, ask
+	what to do instead of appending.
+
 2009-07-16  Robin Stocker  <robin@nibor.org>
 
 	* src/totem-object.c (drop_video_cb, drag_video_cb):
